syntax = "proto3";

package mlserver;

message MlPingReq {
}
message MlPingResp {
}

service Predictor {
    rpc Predict (Request) returns (Response) {}
    rpc Ping(MlPingReq)returns(MlPingResp){}
}

message MediaInfo {
    int32 network = 1;
    string ip = 2;
    int32 media_type = 3;
    int32 media_appsid = 4;
    int32 country = 5;
    int32 province = 6;
    int32 city = 7;
    int32 isp = 8;
    string uid = 9;
    string date = 10;
    int32 hour = 11;
    int32 adslotid = 12;
    int32 adslot_type = 13;
    int32 os = 14;
    string model = 15;
    int32 floorbid = 16;
}

message UserInfo {
    int32 sex = 1;
    int32 age = 2;
    int32 coin = 3;
}

message AdInfo {
    int32 bid = 1;
    int32 ideaid = 2;
    int32 unitid = 3;
    int32 planid = 4;
    int32 userid = 5;
    int32 adtype = 6;
    int32 interaction = 7;
}

message Request {
	MediaInfo media = 1;
    repeated AdInfo ads = 2; //ad params
    UserInfo user = 3;
}

message Prediction {
    int32 adid = 1; //idaeid
    double value = 2; //predict value
}

message Response {
    int32 recode = 1;
    repeated Prediction results = 2;
}


